--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,22 +30,22 @@ jobs:
 
       - python/install-packages:
           pkg-manager: pipenv
+      
       - run:
           name: Run tests
           command: |
              pip install --upgrade pip
              pip install pytest-cov
              pip install --upgrade setuptools
-             # get test files while ignoring __init__ files
-             #TESTFILES=$(circleci tests glob "catalog/tests/*.py" | sed 's/\S\+__init__.py//g')
-             #echo $TESTFILES | tr ' ' '\n' | sort | uniq > circleci_test_files.txt
-             #cat circleci_test_files.txt
-             #TESTFILES=$(circleci tests split --split-by=timings circleci_test_files.txt)
-             # massage filepaths into format manage.py test accepts
-             #TESTFILES=$(echo $TESTFILES | tr "/" "." | sed 's/\.py$//g')
-             #echo $TESTFILES 
-             #pipenv run python manage.py test $TESTFILES
-             pipenv run python manage.py test
+             TESTFILES=$(circleci tests glob "catalog/tests/*.py" | sed 's/\S\+__init__.py//g')
+             echo $TESTFILES | tr ' ' '\n' | sort | uniq > circleci_test_files.txt
+             cat circleci_test_files.txt
+             TESTFILES=$(circleci tests split --split-by=timings circleci_test_files.txt)
+             TESTFILES=$(echo $TESTFILES | tr "/" "." | sed 's/\.py$//g')
+             echo $TESTFILES 
+             pipenv run python manage.py test $TESTFILES
+             #pipenv run python manage.py test
+      
       - save_cache:
           key: py_cache-v2-{{ checksum "requirements.txt" }}
           paths:
