--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,36 @@ orbs:
   python: circleci/python@1.5.0
   heroku: circleci/heroku@1.2.6
 
+commands:
+  restore_cache_cmd:
+    steps:
+      - restore_cache:
+          name: Restore project's cache
+          key: 
+            -py_cache-v2-{{ checksum "requirements.txt" }}
+            -py_cache-v2-
+
+  save_cache_cmd:
+    steps:
+      - save_cache:
+          name: "save cahce"
+          key: py_cache-v2-{{ checksum "requirements.txt" }}
+          paths:
+            - /home/circleci/py_cache            
+
+  build:
+    steps:
+      - checkout
+      - restore_cache_cmd
+      - run:
+          name: "install dependencies"
+          command: |
+             pip install --upgrade pip
+             pip install pytest-cov
+             pip install --upgrade setuptools
+      - save_cache_cmd
+
+
 executors:
   my-executor:
     docker:
@@ -18,54 +48,20 @@ jobs:
   build_and_test: # this can be any name you choose
     executor: my-executor
     resource_class: medium
-    parallelism: 2
+    #parallelism: 2
     steps:
-      - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
-
-      - restore_cache:
-          name: Restore project's cache
-          key: py_cache-v2-{{ checksum "requirements.txt" }}
-
-      - python/install-packages:
-          pkg-manager: pipenv
-      
+      - build
       - run:
           name: Run tests
           command: |
-             pip install --upgrade pip
-             pip install pytest-cov
-             pip install --upgrade setuptools
-             TESTFILES=$(circleci tests glob "catalog/tests/*.py" | sed 's/\S\+__init__.py//g')
-             echo $TESTFILES | tr ' ' '\n' | sort | uniq > circleci_test_files.txt
-             cat circleci_test_files.txt
-             TESTFILES=$(circleci tests split --split-by=timings circleci_test_files.txt)
-             TESTFILES=$(echo $TESTFILES | tr "/" "." | sed 's/\.py$//g')
-             echo $TESTFILES 
-             pipenv run python manage.py test $TESTFILES
-             #pipenv run python manage.py test
+             pipenv run python manage.py test
       
-      - save_cache:
-          key: py_cache-v2-{{ checksum "requirements.txt" }}
-          paths:
-            - /home/circleci/py_cache       
-      - store_test_results:
-          path: test-results
-      - store_artifacts:
-          path: test-results
-          destination: tr1
-      - persist_to_workspace:
-          root: ~/project
-          paths:
-            - .
  
   deploy: # this can be any name you choose
     docker:
       - image: cimg/python:3.10.1
     steps:
-      - attach_workspace:
-          at: ~/project
+      - build
       - heroku/deploy-via-git: 
           force: true # force push when pushing to the heroku remote, see: https://devcenter.heroku.com/articles/git
 
